--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
     <groupId>org.cyberiantiger.minecraft</groupId>
     <artifactId>die-slowly</artifactId>
     <version>1.1-SNAPSHOT</version>
-
+    <scm>
+        <url>https://github.com/cybertiger/Bungee-DieSlowly/</url>
+        <connection>scm:git:git://github.com/cybertiger/Bungee-DieSlowly.git</connection>
+        <developerConnection>scm:git:git@github.com:cybertiger/Bungee-DieSlowly.git</developerConnection>
+    </scm>
     <build>
         <defaultGoal>clean install</defaultGoal>
         <resources>
@@ -57,29 +61,14 @@
                     <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
-<!--
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>1.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <finalName>${project.artifactId}</finalName>
-                            <artifactSet>
-                                <includes>
-                                </includes>
-                            </artifactSet>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
--->
         </plugins>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-webdav</artifactId>
+                <version>1.0-beta-2</version>
+            </extension>
+        </extensions>
     </build>
 
     <repositories>
@@ -104,4 +93,17 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>cyberiantiger.repo</id>
+            <name>CyberianTiger Maven Repository</name>
+            <url>dav:http://cyberiantiger.org/maven</url>
+        </repository>
+        <snapshotRepository>
+            <id>cyberiantiger.repo</id>
+            <name>CyberianTiger Maven Repository</name>
+            <url>dav:http://cyberiantiger.org/maven</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
