--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: DieSlowly
 main : org.cyberiantiger.minecraft.dieslowly.Main
-version: ${version}
+version: ${version}-${project.build.number}
 author: cybertiger
