--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.number>${user.name}</project.build.number>
     </properties>
-=======
->>>>>>> 5f8b7de05304db04ba6a13fca0180ac7bc35d8ca
+
     <scm>
         <url>https://github.com/cybertiger/Bungee-DieSlowly/</url>
         <connection>scm:git:git://github.com/cybertiger/Bungee-DieSlowly.git</connection>
@@ -30,14 +29,14 @@
             </resource>
         </resources>
         <plugins>
-            <plugin>
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.16</version>
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
-            </plugin>
+            </plugin-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -66,20 +65,13 @@
                 </configuration>
             </plugin>
         </plugins>
-        <extensions>
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-webdav</artifactId>
-                <version>1.0-beta-2</version>
-            </extension>
-        </extensions>
     </build>
 
     <repositories>
-        <repository>
+        <!--repository>
             <id>craftminecraft-dev</id>
             <url>http://repo.craftminecraft.net/content/groups/public/</url>
-        </repository>
+        </repository-->
         <repository>
             <id>sonatype-s</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
@@ -88,13 +80,18 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.md_5</groupId>
-            <artifactId>bungeecord-parent</artifactId>
-            <version>1.7.2.2</version>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-api</artifactId>
+            <version>1.7-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-proxy</artifactId>
+            <version>1.7-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
-    <properties>
+    <!--properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -109,5 +106,5 @@
             <name>CyberianTiger Maven Repository</name>
             <url>dav:http://cyberiantiger.org/maven</url>
         </snapshotRepository>
-    </distributionManagement>
+    </distributionManagement-->
 </project>
